--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ button, input {
     flex: 2;
 }
 
+.cta > p {
+    padding: 15px 0px;
+}
+
 .cta, .popout, .footer {
     padding: 50px 0px;
 }
@@ -122,7 +126,7 @@ button {
     background-color: rgb(66, 219, 212);
     border-radius: 7px;
     border: none;
-    box-shadow: 1px 4px 10px -3px black;
+    box-shadow: 1px 3px 10px -5px black;
 }
 
 .popout {
@@ -130,7 +134,7 @@ button {
     flex-direction: row;
     align-items:stretch;
     justify-content: space-evenly;
-    box-shadow: 1px 4px 10px -3px black;
+    box-shadow: 1px 3px 10px -5px black;
 }
 
 .popout, .arow, .brow, label, input {
@@ -159,4 +163,9 @@ input {
 
 input:focus {
     border: 1.5px solid rgb(31, 197, 242);
+    box-shadow: 1px 1px 8px -5px black;
+}
+
+input:invalid {
+    border: 1.5px solid red;
 }
